# cubot_radar

./: CMakeLists.txt  README.md  package.xml
config/param/: YOLOv5_detect.yaml  camera_radar_matrix_param.yaml  cubot_detect_armor_classes.txt  detect_armor_classes.txt  detect_classes.txt  huaray_camera_param.yaml  huaray_camera_param2.yaml  huaray_camera_param3.yaml  serial_port_param.yaml
msg/: ArmorsInformation.msg  CarsInformation.msg  CarsMsg.msg  CustomMsg.msg
src/UI/: CMakeLists.txt
src/UI/include/: mainwindow.h  ui_mainwindow.h
src/UI/src/: mainwindow.cpp  mainwindow.ui
src/UI/test/: test_ui_show.cpp
src/application/: CMakeLists.txt  camera_radar_coordinate_transform.cpp  get_pixel_coordinate.cpp  get_pointcloud_coordinate.cpp
src/camera/: CMakeLists.txt
src/camera/include/: huaray_camera.h  huaray_camera_data.h  huaray_camera_hardware_param.h  huaray_camera_model_param.h  huaray_camera_param.h  huaray_camera_runtime_param.h  huaray_camera_status.h
src/camera/src/: CMakeLists.txt  huaray_camera.cpp  huaray_camera_data.cpp  huaray_camera_hardware_param.cpp  huaray_camera_model_param.cpp  huaray_camera_param.cpp  huaray_camera_runtime_param.cpp  huaray_camera_status.cpp
src/camera/test/: huaray_sdk_callback_demo.cpp  test_huaray_camera.cpp  test_huaray_camera_data.cpp  test_huaray_camera_param.cpp  test_huaray_camera_status.cpp  test_image_publisher.cpp
src/common/: CMakeLists.txt
src/common/include/: algorithm.h  bgr_weight.h  delta_cv.h  hsv_threshold.h  log_message.h  shared_memory.h
src/common/src/: algorithm.cpp  bgr_weight.cpp  delta_cv.cpp  hsv_threshold.cpp  shared_memory.cpp
src/common/test/: test_delta_cv.cpp
src/detect/: CMakeLists.txt
src/detect/include/: detect_armors_info.h  detect_cars_info.h  detect_yolo.h  detector_param.h  init.h  utils.h
src/detect/src/: detect_armors_info.cpp  detect_cars_info.cpp  detect_param.cpp  detect_yolo.cpp
src/detect/test/: detect_result_publisher.cpp  detect_result_publisher2.cpp  detect_result_subscriber.cpp  test_import_model.cpp  test_target_detect.cpp
src/fuse/: CMakeLists.txt
src/fuse/include/: camera_radar_matrix.h  camera_radar_matrix_param.h  coordinate_transformer.h  outparam.h
src/fuse/src/: camera_radar_matrix.cpp  camera_radar_matrix_param.cpp  coordinate_transformer.cpp  outparam.cpp
src/fuse/test/: fuse2to1.cpp  fuse_info2.cpp  fuse_info_subscriber.cpp  locate_target.cpp  multi_sensor_subscriber.cpp  test_outparam.cpp
src/logger/: CMakeLists.txt
src/logger/include/: easy_logger.h  easy_logger_param.h  system_configurator.h
src/logger/include/spdlog/: spdlog.h
src/logger/include/spdlog/fmt/bundled/: format-inl.h
src/logger/src/: system_configurator.cpp
src/radar/: CMakeLists.txt
src/radar/include/: livox_radar_subscriber.h  point_cloud_filter.h  processPointCloud.h
src/radar/src/: livox_radar_subscriber.cpp  point_cloud_filter.cpp
src/radar/test/: test_pointcloud_coloring.cpp  test_radar_depth_map.cpp  test_radar_gathering.cpp  test_radar_publisher.cpp  test_radar_subscriber.cpp
src/uart/: CMakeLists.txt
src/uart/include/: robot_command.h  serial_port.h  serial_port_param.h  uart.h
src/uart/src/: robot_command.cpp  serial_port.cpp  serial_port_param.cpp  uart.cpp
src/uart/test/: test_radar_uart.cpp  test_serial.cpp  test_serial_port.cpp  test_serial_port_param.cpp  test_uart.cpp
